fixed photo alignment on div

--- a/app/assets/stylesheets/dashboard/_show.scss
+++ b/app/assets/stylesheets/dashboard/_show.scss
@@ -10,6 +10,11 @@
   color:white;
 }
 
+// .ab-photo {
+//   position:absolute;
+//   top:0;
+// }
+
 .m-80 {
     margin: 0 80px;
 }
@@ -62,7 +67,7 @@
 }
 // assigned therapıst stylıng
 .assigned {
-  height: 165px;
+  height: fit-content;
   background-color: #94ABE4;
   padding-top: 6px;
   margin-bottom: 18px;
